@@ -39,4 +39,16 @@ int _pysqlite_seterror(sqlite3* db, sqlite3_stmt* st);
 PyObject * _pysqlite_long_from_int64(sqlite_int64 value);
 sqlite_int64 _pysqlite_long_as_int64(PyObject * value);
 
+#if SQLITE_VERSION_NUMBER >= 3003009
+#define SQLITE3_PREPARE sqlite3_prepare_v2
+#else
+#define SQLITE3_PREPARE sqlite3_prepare
+#endif
+
+#if SQLITE_VERSION_NUMBER >= 3007014
+#define SQLITE3_CLOSE sqlite3_close_v2
+#else
+#define SQLITE3_CLOSE sqlite3_close
+#endif
+
 #endif
